--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -12,7 +12,15 @@
 
 <p>
   <strong>Brewery:</strong>
-  <%= @beer.brewery_id %>
+  <%= Brewery.find(@beer.brewery_id).name %>
+</p>
+
+<p>
+	<% if @beer.ratings.empty? %>
+		Beer has not been rated yet!
+	<% else %>
+		Beer has <%= pluralize(@beer.ratings.count, "rating") %>, average <%= @beer.average_rating %>
+	<% end %>
 </p>
 
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
