--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,4 +1,6 @@
-<h2>List of ratings</h2>ul>
+<h2>List of ratings</h2>
+
+Number of ratings: <%= @ratings.count %>
 
 <ul>
 	<% @ratings.each do |rating| %>
