--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -16,5 +16,12 @@
 	<% end %>
 </p>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
+<p>
+	<% if @brewery.ratings.empty? %>
+		There are no ratings yet!
+	<% else %>
+		 Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= @brewery.average_rating %>
+	<% end %>
+</p>
+
+<%= link_to 'Edit', edit_brewery_path(@brewery) %>
