--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,7 +1,9 @@
 <h2>Create new rating</h2>
 
 <%= form_for(@rating) do |f| %>
-  beer id: <%= f.number_field :beer_id %>
-  score: <%= f.number_field :score %>
-  <%= f.submit %>
+	<% select_array = @beers.map { |beer| [beer, beer.id] } %>
+	<%= f.select :beer_id, options_for_select(select_array) %>
+  	score: <%= f.number_field :score %>
+  	
+  	<%= f.submit %>
 <% end %>
