--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,10 +1,10 @@
-<h2>List of ratings</h2>
+<h1>Listing Ratings</h1>
 
 Number of ratings: <%= @ratings.count %>
 
 <ul>
 	<% @ratings.each do |rating| %>
-	<li><%= rating %> <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+	<li><%= rating %> <%= link_to User.find(rating.user_id).username, User.find(rating.user_id) %></li>
 	<% end %>
 </ul>
 
