--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -1,9 +1,28 @@
 <h2>Create new rating</h2>
 
 <%= form_for(@rating) do |f| %>
-	<% select_array = @beers.map { |beer| [beer, beer.id] } %>
-	<%= f.select :beer_id, options_for_select(select_array) %>
-  	score: <%= f.number_field :score %>
-  	
-  	<%= f.submit %>
+	<% if @rating.errors.any? %>
+		<div id="error_explanation">
+			<h2><%= pluralize(@rating.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+			<ul>
+				<% @rating.errors.full_messages.each do |msg| %>
+					<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
+	
+	<div class="field">
+		<%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s) %>
+	</div>
+
+	<div class="field">
+  		<%= f.label 'score' %> <br>
+  		<%= f.number_field :score %>
+	</div>
+
+	<div class="actions">
+	  	<%= f.submit %>
+	</div>
 <% end %>
