--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,17 @@
 	
 	<ul>
 	<% @user.ratings.each do |rating| %>
-		<li><%= rating %> <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?'} %></li>
+		<li>
+			<%= rating %> 
+			<% if @user == current_user %>
+				<%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?'} %>
+			<% end %>
+		</li>
 	<% end %>
 	</ul>
+<% end %>
+
+<% if @user == current_user %>
+	<%= link_to 'Edit info', edit_user_path(@user) %>
+	<%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
