--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -18,4 +18,5 @@
 	</ul>
 <% end %>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %>
+<%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %><br />
+<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
