--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -23,4 +23,5 @@
 	<% end %>
 </p>
 
-<%= link_to 'Edit', edit_beer_path(@beer) if current_user %>
+<%= link_to 'Edit', edit_beer_path(@beer) if current_user %><br />
+<%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
