Beer clubien membershipit kuntoon

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,18 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
+<h2>
   <%= @beer.name %>
-</p>
+</h2>
 
 <p>
   <strong>Style:</strong>
-  <%= @beer.style %>
-</p>
+  <%= @beer.style %><br />
 
-<p>
   <strong>Brewery:</strong>
-  <%= Brewery.find(@beer.brewery_id).name %>
+  <%= link_to @brewery.name, @brewery %>
 </p>
 
 <p>
@@ -23,5 +20,19 @@
 	<% end %>
 </p>
 
-<%= link_to 'Edit', edit_beer_path(@beer) if current_user %><br />
-<%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
+<% if current_user %>
+
+  <h4>Give a rating</h4>
+
+  <%= form_for(@rating) do |f| %>
+    <%= f.hidden_field :beer_id %>
+    score: <%= f.number_field :score %>
+    <%= f.submit %>
+  <% end %>
+
+  <p>  
+    <%= link_to 'Edit', edit_beer_path(@beer) %> |
+    <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </p>
+
+<% end %>
