--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -18,5 +18,23 @@
 	</ul>
 <% end %>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %><br />
-<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
+<% if current_user %>
+
+	<% if @membership.user_id.nil? %>
+		<%= form_for(@membership) do |f| %>
+			<%= f.hidden_field :beer_club_id %>
+			<%= f.submit value:"Join the club" %>
+		<% end %>
+	<% else %>
+		<%= form_for(@membership, method: "delete") do |f| %>
+			<%= f.hidden_field :beer_club_id %>
+			<%= f.submit value:"End the membership" %>
+		<% end %>
+	<% end %>
+	
+	<br />
+
+	<%= link_to 'Edit', edit_beer_club_path(@beer_club) %> | 
+	<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+<% end %>
