--- a/app/views/ratings/new.html.erb
+++ b/app/views/ratings/new.html.erb
@@ -14,7 +14,7 @@
 	<% end %>
 	
 	<div class="field">
-		<%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s) %>
+		<%= f.select :beer_id, options_from_collection_for_select(@beers, :id, :to_s, selected: @rating.beer_id) %>
 	</div>
 
 	<div class="field">
