--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 	<p>Has not rated any beers yet!</p>
 <% else %>
 	<p>
-		Favourite beer style: <%= @user.favorite_style %><br />
+		Favourite beer style: <%= @user.favorite_style.name %><br />
 		Favourite brewery: <%= @user.favorite_brewery.name %>
 	</p>
 	<p>Has rated <%= pluralize(@user.ratings.count, "beer") %>, average <%= @user.average_rating %>
