--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -28,13 +28,13 @@
 	<% else %>
 		<%= form_for(@membership, method: "delete") do |f| %>
 			<%= f.hidden_field :beer_club_id %>
-			<%= f.submit value:"End the membership" %>
+			<%= f.submit value:"End the membership", class:'btn btn-danger' %>
 		<% end %>
 	<% end %>
 	
 	<br />
 
-	<%= link_to 'Edit', edit_beer_club_path(@beer_club) %> | 
-	<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to 'Edit', edit_beer_club_path(@beer_club), class:'btn btn-primary' %> 
+	<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %>
 
 <% end %>
