--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -4,7 +4,7 @@
 
 <p> Number of breweries: <%= @breweries.count %> </p>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -25,5 +25,4 @@
 
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path if current_user %>
-<%= link_to 'List of beers', beers_path %>
+<%= link_to 'New Brewery', new_brewery_path, class:'btn btn-success' if current_user %>
