--- a/app/views/memberships/new.html.erb
+++ b/app/views/memberships/new.html.erb
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="actions">
-		<%= f.submit 'Join club!' %>
+		<%= f.submit 'Join club!', class:"btn btn-success" %>
 	</div>
 
 <% end %>
