--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -2,12 +2,26 @@
 
 Number of ratings: <%= @ratings.count %>
 
-<ul>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Beer</th>
+      <th>Rating</th>
+      <th colspan="3">User</th>
+    </tr>
+  </thead>
+
+  <tbody>
 	<% @ratings.each do |rating| %>
-	<li><%= rating %> <%= link_to User.find(rating.user_id).username, User.find(rating.user_id) %></li>
-	<% end %>
-</ul>
+	   <tr>
+          <td><%= link_to rating.beer.name, rating.beer %></td>
+          <td><%= rating.score %></td>
+          <td><%= link_to rating.user.username, rating.user %></td>
+	   </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <% if current_user %>
-	<%= link_to 'New rating', new_rating_path %>
+	<%= link_to 'New rating', new_rating_path, class:'btn btn-success' %>
 <% end %>
