--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,26 +1,69 @@
-<h1>Listing Ratings</h1>
+<h2>Rating statistics</h2>
 
-Number of ratings: <%= @ratings.count %>
+<div class="row">
+  <div class="col-md-4">
+    <h3>Best beers</h3>
+    <%= render 'top', top: @topbeers, title: "Beer" %>
+  </div>
+  <div class="col-md-4">
+    <h3>Best breweries</h3>
+    <%= render 'top', top: @topbreweries, title: "Brewery" %>
+  </div>
+  <div class="col-md-4">
+    <h3>Best styles</h3>
+    <%= render 'top', top: @topstyles, title: "Style" %>
+  </div>
+</div>
+
+<h3>Most active users</h3>
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Beer</th>
-      <th>Rating</th>
-      <th colspan="3">User</th>
+      <th class="col-md-2">User</th>
+      <th class="col-md-3">Favorite beer</th>
+      <th class="col-md-3">Preferred style</th>
+      <th class="col-md-3">Favorite brewery</th>
+      <th class="col-md-1">Ratings</th>
     </tr>
   </thead>
 
   <tbody>
-	<% @ratings.each do |rating| %>
-	   <tr>
-          <td><%= link_to rating.beer.name, rating.beer %></td>
-          <td><%= rating.score %></td>
-          <td><%= link_to rating.user.username, rating.user %></td>
-	   </tr>
+    <% @topraters.each do |user| %>
+      <tr>
+        <td><%= link_to user.username, user %></td>
+        <td><%= link_to user.favorite_beer.name, user.favorite_beer %></td>
+        <td><%= link_to user.favorite_style.name, user.favorite_style %></td>
+        <td><%= link_to user.favorite_brewery.name, user.favorite_brewery %></td>
+        <td><%= user.ratings.count %></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
+
+<h3>Recent ratings</h3>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th class="col-md-7">Beer</th>
+      <th class="col-md-2">Rating</th>
+      <th class="col-md-3">User</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @ratings.recent.each do |rating| %>
+      <tr>
+        <td><%= link_to rating.beer.name, rating.beer %></td>
+        <td><%= rating.score %></td>
+        <td><%= link_to rating.user.username, rating.user %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<p>Total number of ratings: <%= @ratings.count %></p>
 
 <% if current_user %>
 	<%= link_to 'New rating', new_rating_path, class:'btn btn-success' %>
