--- a/app/views/ratings/_top.html.erb
+++ b/app/views/ratings/_top.html.erb
@@ -10,7 +10,7 @@
     <% top.each do |v| %>
       <tr>
         <td><%= link_to v.name, v %></td>
-        <td><%= v.average_rating %></td>
+        <td><%= round(v.average_rating)||"not rated" %></td>
       </tr>
     <% end %>
   </tbody>
