--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1><%= @beer_club.name %>, <%= @beer_club.city %></h1>
 
 <p>
@@ -34,7 +32,6 @@
 	
 	<br />
 
-	<%= link_to 'Edit', edit_beer_club_path(@beer_club), class:'btn btn-primary' %> 
-	<%= link_to 'Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %>
-
 <% end %>
+
+<%= edit_and_destroy_buttons(@beer_club) %>
