--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h2>
   <%= @beer.name %>
 </h2>
@@ -16,7 +14,7 @@
 	<% if @beer.ratings.empty? %>
 		Beer has not been rated yet!
 	<% else %>
-		Beer has <%= pluralize(@beer.ratings.count, "rating") %>, average <%= @beer.average_rating %>
+		Beer has <%= pluralize(@beer.ratings.count, "rating") %>, average <%= round(@beer.average_rating) %>
 	<% end %>
 </p>
 
@@ -30,9 +28,6 @@
     <%= f.submit class:"btn btn-success" %>
   <% end %>
 
-  <p>  
-    <%= link_to 'Edit', edit_beer_path(@beer), class:'btn btn-primary' %>
-    <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %>
-  </p>
-
 <% end %>
+
+<%= edit_and_destroy_buttons(@beer) %>
