--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -23,11 +23,10 @@
 	<% if @brewery.ratings.empty? %>
 		There are no ratings yet!
 	<% else %>
-		 Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= @brewery.average_rating %>
+		 Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= round(@brewery.average_rating) %>
 	<% end %>
 </p>
 
-<% if current_user %>
-	<%= link_to 'Edit', edit_brewery_path(@brewery), class:'btn btn-primary' %>
-	<%= link_to 'Destroy', @brewery, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %>
-<% end %>
+<%= link_to "Change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
+
+<%= edit_and_destroy_buttons(@brewery) %>
