--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
     <header>
       <%= render 'layouts/navigation' %>
     </header>
-    <main role="main" class=".container">
+    <main role="main" class="container">
       <%= render 'layouts/messages' %>
-      <div class="row">
+      <div class="row container">
         <div class="col-md-8">
           <%= yield %>
         </div>
