--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h2>
   <%= @style.name %>
 </h2>
@@ -18,7 +16,8 @@
 	<% end %>
 </ul>
 
-<% if current_user %>
-	<%= link_to 'Edit', edit_style_path(@style), class:'btn btn-primary' %>
-	<%= link_to 'Destroy', @style, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %>
-<% end %>
+<p>
+    Average rating of beers: <%= round(@style.average_rating) %>
+</p>
+
+<%= edit_and_destroy_buttons(@style) %>
