--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
-<h2><%= @user.username %></h2>
+<h2>
+	<%= @user.username %>
+	<% if @user.banned %>
+		<span class="label label-info">Account frozen</span>
+	<% end %>
+</h2>
 
 <% if @user.beer_clubs.empty? %>
 	<p>Has no beer club memberships!</p>
@@ -18,7 +23,7 @@
 		Favourite beer style: <%= @user.favorite_style.name %><br />
 		Favourite brewery: <%= @user.favorite_brewery.name %>
 	</p>
-	<p>Has rated <%= pluralize(@user.ratings.count, "beer") %>, average <%= @user.average_rating %>
+	<p>Has rated <%= pluralize(@user.ratings.count, "beer") %>, average <%= round(@user.average_rating) %>
 
 	<h3>Ratings</h3>
 	
@@ -35,6 +40,11 @@
 <% end %>
 
 <% if @user == current_user %>
-	<%= link_to 'Edit info', edit_user_path(@user) %>
-	<%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to 'Edit info', edit_user_path(@user), class: "btn btn-primary" %>
+	<%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+<% end %>
+
+<% if is_admin %>
+	<% link_text = @user.banned? ? "Unfreeze" : "Freeze" %>
+	<%= link_to link_text, toggle_ban_user_path(@user.id), method: :post, class: "btn btn-danger" %>
 <% end %>
