--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,10 +3,9 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Style</th>
-      <th>Brewery</th>
-      <th colspan="3"></th>
+      <th><%= link_to 'Name', beers_path(order:"name") %></th>
+      <th><%= link_to 'Style', beers_path(order:"style") %></th>
+      <th><%= link_to 'Brewery', beers_path(order:"brewery") %></th>
     </tr>
   </thead>
 
@@ -15,7 +14,7 @@
       <tr>
         <td><%= link_to beer.name, beer %></td>
         <td><%= link_to beer.style.name, beer.style %></td>
-        <td><%= link_to Brewery.find(beer.brewery_id).name, Brewery.find(beer.brewery_id) %></td>
+        <td><%= link_to beer.brewery.name, beer.brewery %></td>
       </tr>
     <% end %>
   </tbody>
