--- a/app/views/breweries/_list.html.erb
+++ b/app/views/breweries/_list.html.erb
@@ -1,8 +1,13 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th class="col-md-9">Name</th>
-      <th class="col-md-3">Year</th>
+      <% if @order_nil %>
+        <th class="col-md-9"><%= link_to 'Name', breweries_path(order:'name') %></th>
+        <th class="col-md-3"><%= link_to 'Year', breweries_path(order:'year') %></th>
+      <% else %>
+        <th class="col-md-9"><%= link_to 'Name', breweries_path(order:'name', desc:!@desc) %></th>
+        <th class="col-md-3"><%= link_to 'Year', breweries_path(order:'year', desc:!@desc) %></th>
+      <% end %>
     </tr>
   </thead>
 
