--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -1,17 +1,30 @@
-<h1><%= @beer_club.name %>, <%= @beer_club.city %></h1>
+<h2><%= @beer_club.name %>, <%= @beer_club.city %></h2>
 
 <p>
   Founded <%= @beer_club.founded %>
 </p>
 
-<h2>Members</h2>
+<h3>Members</h3>
 
-<% if @beer_club.members.empty? %>
+<% if @beer_club.confirmed_memberships.empty? %>
 	<p>There are no members! :(</p>
 <% else %>
 	<ul>
-		<% @beer_club.members.each do |member| %>
-			<li><%= link_to member.username, member %></li> 
+		<% @beer_club.confirmed_memberships.each do |membership| %>
+			<li><%= link_to membership.user.username, membership.user %></li> 
+		<% end %>
+	</ul>
+<% end %>
+
+<% if (!@beer_club.unconfirmed_memberships.empty?) && @beer_club.is_member(current_user) %>
+	<h3>Applied members</h3>
+
+	<ul>
+		<% @beer_club.unconfirmed_memberships.each do |membership| %>
+			<li>
+				<%= link_to membership.user.username, membership.user %>
+				<%= link_to "Confirm", confirm_membership_path(membership.id), method: :post, class: "btn btn-primary btn-xs" %>
+			</li> 
 		<% end %>
 	</ul>
 <% end %>
@@ -21,12 +34,12 @@
 	<% if @membership.user_id.nil? %>
 		<%= form_for(@membership) do |f| %>
 			<%= f.hidden_field :beer_club_id %>
-			<%= f.submit value:"Join the club" %>
+			<%= f.submit value:"Apply to join the club", class:'btn btn-success' %>
 		<% end %>
 	<% else %>
 		<%= form_for(@membership, method: "delete") do |f| %>
 			<%= f.hidden_field :beer_club_id %>
-			<%= f.submit value:"End the membership", class:'btn btn-danger' %>
+			<%= f.submit value:@beer_club.is_member(current_user) ? "End the membership" : "Cancel application", class:'btn btn-danger' %>
 		<% end %>
 	<% end %>
 	
