--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,5 +1,17 @@
 <h1>Listing Beers</h1>
 
+<div style="border-style: solid;">
+  beerlist-name: <%= ActionController::Base.new.fragment_exist?( 'beerlist-name' ) %>
+  <br>
+  beerlist-style: <%= ActionController::Base.new.fragment_exist?( 'beerlist-style' ) %>
+  <br>
+  beerlist-brewery: <%= ActionController::Base.new.fragment_exist?( 'beerlist-brewery' ) %>
+  <br>
+  current: <%= "beerlist-#{@order}" %>
+</div>
+
+<% cache "beerlist-#{@order}", skip_digest: true do %>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -19,6 +31,8 @@
     <% end %>
   </tbody>
 </table>
+
+<% end %>
 
 <br>
 <%= link_to 'New Beer', new_beer_path, class:'btn btn-success' if current_user %>
