--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,5 +1,15 @@
 <h1>Listing Breweries</h1>
 
+<div style="border-style: solid;">
+  brewerylist-name: <%= ActionController::Base.new.fragment_exist?( 'brewerylist-name' ) %>
+  <br>
+  brewerylist-year: <%= ActionController::Base.new.fragment_exist?( 'brewerylist-year' ) %>
+  <br>
+  current: <%= "brewerylist-#{@order}" %>
+</div>
+
+<% cache "brewerylist-#{@order}", skip_digest: true do %>
+
 <p>Total breweries: <%= @active_breweries.count + @retired_breweries.count %></p>
 
 <h2>Active</h2>
@@ -13,6 +23,8 @@
 <p>Number of retired breweries: <%= @retired_breweries.count %></p>
 
 <%= render 'list', breweries: @retired_breweries if not @retired_breweries.empty? %>
+
+<% end %>
 
 <br>
 
