--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,31 +1,35 @@
-<h2>
-	<%= @brewery.name %>
-	<% if not @brewery.active %>
-		<span class="label label-info">retired</span>
-	<% end %>
-</h2>
-	
-<p>
-	<em>Established at <%= @brewery.year %></em>
-</p>
+<% cache @brewery do %>
 
-<p>
-	Number of beers: <%= @brewery.beers.count %>
-</p>
+	<h2>
+		<%= @brewery.name %>
+		<% if not @brewery.active %>
+			<span class="label label-info">retired</span>
+		<% end %>
+	</h2>
+		
+	<p>
+		<em>Established at <%= @brewery.year %></em>
+	</p>
 
-<ul>
-	<% @brewery.beers.each do |beer| %>
-		<li><%= link_to beer.name, beer %></li>
-	<% end %>
-</ul>
+	<p>
+		Number of beers: <%= @brewery.beers.count %>
+	</p>
 
-<p>
-	<% if @brewery.ratings.empty? %>
-		There are no ratings yet!
-	<% else %>
-		 Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= round(@brewery.average_rating) %>
-	<% end %>
-</p>
+	<ul>
+		<% @brewery.beers.each do |beer| %>
+			<li><%= link_to beer.name, beer %></li>
+		<% end %>
+	</ul>
+
+	<p>
+		<% if @brewery.ratings.empty? %>
+			There are no ratings yet!
+		<% else %>
+			 Has <%= pluralize(@brewery.ratings.count, "rating") %>, average <%= round(@brewery.average_rating) %>
+		<% end %>
+	</p>
+
+<% end %>
 
 <%= link_to "Change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
 
